@@ -5,6 +5,10 @@ Revision history for Net::DNS
 =============================
 *** NOT RELEASED YET
 
+Fix IPv6 modules
+    When IO::Socket::INET6 was available but Socket6 was not the code would
+    recurse to infinity.
+
 Fix rt.cpan.org #21757 and Feature: Connectivity during test
     Addition of --no-IPv6-tests and --IPv6-tests option in Makefile.PL.
     Note: This causes two questions to be asked when building the
